# controller/products/product.go
@@ -24,13 +24,13 @@ func ConstructorProductController(service service.ProductService) ProductControl
 	return &productController{service: service}
 }
 
-// @summary Retrieve All Product Data  
-// @Description This endpoint is used to retrieve a list of all products along with detailed information for each product. It also allows you to get the details of a specific product by its ID. The response will include information like product name, description, price, and other relevant details.  
-// @Tags Product  
-// @Produce application/json  
-// @Success 200 {object} []ResponseProduct "Successfully retrieved list of products and their details"  
-// @Failure 404 {object} ResponseErrorNotFound "Products not found"  
-// @Failure 500 {object} ResponseErrorInternalServer "Internal server error while processing the request"  
+// @summary Retrieve All Product Data
+// @Description This endpoint is used to retrieve a list of all products along with detailed information for each product. It also allows you to get the details of a specific product by its ID. The response will include information like product name, description, price, and other relevant details.
+// @Tags product
+// @Produce application/json
+// @Success 200 {object} []ResponseProduct "Successfully retrieved list of products and their details"
+// @Failure 404 {object} ResponseErrorNotFound "Products not found"
+// @Failure 500 {object} ResponseErrorInternalServer "Internal server error while processing the request"
 // @Router /product [get]
 func (ps *productController) GetAllProduct(e echo.Context) error {
 	data, res, statusCode := ps.service.GetAllProduct()
@@ -41,16 +41,18 @@ func (ps *productController) GetAllProduct(e echo.Context) error {
 	return e.JSON(statusCode, data)
 }
 
-// @summary post data Product
+// @summary Add data Product
 // @Description Add a new Product to the system
-// @Tags Product
+// @Tags admin
+// @Security BearerAuth
 // @accept  multipart/form-data
 // @produce  application/json
 // @Param category body ProductInput true "Product Input"
-// @Success 200 {object} ResponseSuccess "Product successfully added to the system"  
-// @Failure 400 {object} ResponseErrorBadRequest "Invalid request or incomplete product data"  
-// @Failure 500 {object} ResponseErrorInternalServer "Internal server error while processing the request"  
-// @Router /product [post]
+// @Param categoryGender formData string true "Category Gender (Man, Woman, Unisex)" Enums(Man, Woman, Unisex)
+// @Success 200 {object} ResponseSuccess "Product successfully added to the system"
+// @Failure 400 {object} ResponseErrorBadRequest "Invalid request or incomplete product data"
+// @Failure 500 {object} ResponseErrorInternalServer "Internal server error while processing the request"
+// @Router /admin/product [post]
 func (ps *productController) InputProduct(e echo.Context) error {
 	var response = make(map[string]interface{})
 
@@ -86,11 +88,11 @@ func (ps *productController) InputProduct(e echo.Context) error {
 
 // @summary Get All Data Product Male
 // @Description Get detailed information of all data Product Male
-// @Tags Product
+// @Tags product
 // @Produce application/json
-// @Success 200 {object} []ResponseProduct "Successfully retrieved list of male products with details"  
-// @Failure 404 {object} ResponseErrorNotFound "No male products found"  
-// @Failure 500 {object} ResponseErrorInternalServer "Internal server error while processing the request"  
+// @Success 200 {object} []ResponseProduct "Successfully retrieved list of male products with details"
+// @Failure 404 {object} ResponseErrorNotFound "No male products found"
+// @Failure 500 {object} ResponseErrorInternalServer "Internal server error while processing the request"
 // @Router /product/male [get]
 func (ps *productController) GetAllMale(e echo.Context) error {
 	data, res, statusCode := ps.service.GetAllProductMale()
@@ -103,11 +105,11 @@ func (ps *productController) GetAllMale(e echo.Context) error {
 
 // @summary Get All Data Product Female
 // @Description Get detailed information of all data Product Female
-// @Tags Product
+// @Tags product
 // @Produce application/json
-// @Success 200 {object} []ResponseProduct "Successfully retrieved list of female products with details"  
-// @Failure 404 {object} ResponseErrorNotFound "No female products found"  
-// @Failure 500 {object} ResponseErrorInternalServer "Internal server error while processing the request"  
+// @Success 200 {object} []ResponseProduct "Successfully retrieved list of female products with details"
+// @Failure 404 {object} ResponseErrorNotFound "No female products found"
+// @Failure 500 {object} ResponseErrorInternalServer "Internal server error while processing the request"
 // @Router /product/female [get]
 func (ps *productController) GetAllFemale(e echo.Context) error {
 	data, res, statusCode := ps.service.GetAllProductFemale()
